sesion5/hpa-example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-demo
spec:
  replicas: 1                    # HPA tomará control de esto
  selector:
    matchLabels:
      app: hpa-demo
  template:
    metadata:
      labels:
        app: hpa-demo
    spec:
      containers:
      - name: app
        image: polinux/stress
        resources:
          requests:
            cpu: 200m            # HPA usa esto como base para calcular %
            memory: 100Mi
          limits:
            #cpu: 500m
            cpu: 2.5
            memory: 200Mi
        command: ["stress"]
        args: ["--cpu", "1"]     # fuerza consumo de CPU continuo
