sesion5/pod-limits-cpu.yml
kind: Pod
apiVersion: v1
metadata:
  name: pod-limits-cpu
spec:
  containers:
  - name: pod-cpu-demo-ctr
    image: vish/stress
    resources:
      limits:
        #cpu: "0.5"
        #cpu: "1"
        cpu: "2"
      requests:
        cpu: "0.5"
    args:
    - -cpus
    - "1"
    #- "2"
