sesion5/pod-limits-memory.yml
kind: Pod
apiVersion: v1
metadata:
  name: pod-limits-memory
spec:
  containers:
  - name: memory-demo-ctr
    image: polinux/stress
    resources:
      limits:
        memory: "200Mi"
        #memory: "6144Mi"
      requests:
        memory: "100Mi"
        #memory: "6144Mi"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "150M", "--vm-hang", "1"]
    #args: ["--vm", "1", "--vm-bytes", "190M", "--vm-hang", "1"]
    #args: ["--vm", "1", "--vm-bytes", "200M", "--vm-hang", "1"] # OOMKilled
