sesion5/vpa-example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpa-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpa-demo
  template:
    metadata:
      labels:
        app: vpa-demo
    spec:
      containers:
      - name: app
        image: polinux/stress
        resources:
          requests:
            cpu: 100m        # ← intencionalmente bajo
            #memory: 50Mi # ratio x4
            memory: 100Mi # ratio x2
          limits:
            cpu: 200m
            memory: 200Mi
        command: ["stress"]
        args: ["--vm", "1", "--vm-bytes", "190M", "--vm-hang", "1"] # Fase 1: estable
        #args: ["--vm", "1", "--vm-bytes", "200M", "--vm-hang", "1"] # Fase 2: OOMKilled
        #args: ["-cpus", "3"]               # ← fuerza consumo de CPU
