sesion5/gateway-routes-canary.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-canary-route
  namespace: default
spec:
  parentRefs:
  - name: web-gateway
  hostnames:
  - "hello-world.info"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: web1-svc      # stable
      port: 8080
      weight: 80          # ← 80% del tráfico
    - name: web2-svc      # canary
      port: 8080
      weight: 20          # ← 20% del tráfico
