sesion5/gateway-routes-header-qa.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-canary-header-route
  namespace: default
spec:
  parentRefs:
  - name: web-gateway
  hostnames:
  - "hello-world.info"
  rules:
  # Regla 1: header canary → web2
  - matches:
    - path:
        type: PathPrefix
        value: /
      headers:
      - name: X-Canary
        value: "true"
    backendRefs:
    - name: web2-svc
      port: 8080
      weight: 100

  # Regla 2: tráfico normal → web1
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: web1-svc
      port: 8080
      weight: 100
