sesion5/gateway-routes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web1-route
  namespace: default
spec:
  parentRefs:
  - name: web-gateway
  hostnames:
  - "hello-world.info"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: web1-svc
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web2-route
  namespace: default
spec:
  parentRefs:
  - name: web-gateway
  hostnames:
  - "hello-world.info"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v2
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /     # ← equivalente al stripPrefix Middleware
    backendRefs:
    - name: web2-svc
      port: 8080
